--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -6,7 +6,7 @@
     height: 30rem;
 }
 
-h1 {
+.home h1 {
     font-size: 2rem;
     margin-bottom: 2rem;
     border-bottom: 0.25rem solid #E60000;
