--- a/src/pages/dashboard/dashboard.css
+++ b/src/pages/dashboard/dashboard.css
@@ -22,6 +22,7 @@
     background-color: aqua;
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 .dashboard__keyFigures {
