feat(performance):add charts performance and data

--- a/src/pages/dashboard/dashboard.css
+++ b/src/pages/dashboard/dashboard.css
@@ -57,3 +57,10 @@
     height: 100%;
     border-radius: 0.31rem;
 }
+
+.charts__typeOfPerformance {
+    background-color: #282d30;
+    width: 16.12rem;
+    height: 100%;
+    border-radius: 0.31rem;
+}
