--- a/src/components/sessionDuration/sessionDuration.css
+++ b/src/components/sessionDuration/sessionDuration.css
@@ -17,15 +17,12 @@
 }
 
 .session__tooltip {
-    /* background-color: white;
-	height: 25px;
-    width: 39px; */
-    padding: 10px;
+    padding: 0.62rem;
     background-color: white;
     font-size: 0.6rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 20px;
+    gap: 1.25rem;
 }
 
