--- a/src/components/keyFigures/keyFigures.css
+++ b/src/components/keyFigures/keyFigures.css
@@ -9,7 +9,6 @@
     height: 7.75rem;
     margin-bottom: 2.43rem;
     display: flex;
-    justify-content: center;
     align-items: center;
 }
 
@@ -19,6 +18,7 @@
 
 .keyFigure__img {
     margin-right: 1.5rem;
+    margin-left: 2rem;
 }
 
 .keyFigure__name {
